# ErsatzTV.Core/Api/ScriptedPlayout/PeekItemResponseModel.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel;
+
+namespace ErsatzTV.Core.Api.ScriptedPlayout;
+
+public class PeekItemResponseModel
+{
+    public string Content { get; set; }
+
+    [Description("Duration in milliseconds")]
+    public long Milliseconds { get; set; }
+}
